# fluxchat-sdk

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  contrib.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
examples/: dart_quickstart.dart  quickstart.mjs  widget.html
examples/flutter_example/: pubspec.yaml
examples/flutter_example/lib/: main.dart
sdk/dart/: README.md  pubspec.yaml
sdk/dart/lib/: fluxchat.dart  fluxchat_sdk.dart  widget.dart
sdk/dart/test/: fluxchat_test.dart  sdk_test.dart  widget_test.dart
sdk/dotnet/: Exceptions.cs  FluxChat.csproj  FluxChatClient.cs  README.md
sdk/dotnet/Tests/: FluxChat.Tests.csproj  FluxChatClientTests.cs
sdk/flutter/: README.md
sdk/go/: README.md  autocapture.go  fluxchat.go  fluxchat_test.go  go.mod
sdk/kotlin/: README.md  build.gradle.kts
sdk/php/: README.md  composer.json
sdk/php/src/: FluxChat.php  KnowledgeClient.php
sdk/php/tests/: FluxChatTest.php
sdk/python/: README.md  pyproject.toml
sdk/python/fluxchat/: __init__.py  _http.py  client.py  exceptions.py  knowledge.py  models.py
sdk/python/tests/: test_client.py
sdk/react-native/: README.md  package-lock.json  package.json  tsconfig.json
sdk/react-native/__tests__/: client.test.ts  useFluxChat.test.ts
sdk/swift/: Package.swift  README.md
src/: client.ts  errors.ts  http.ts  index.ts  types.ts
src/cli/: client-factory.ts  index.ts  program.ts
src/resources/: bot.ts  config.ts  knowledge.ts
src/widget/: global.ts  index.ts  styles.ts  types.ts  widget.ts
test/: cli.test.ts  sdk.test.ts  widget.test.ts
(+39 files in other folders)
