[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxchat"
version = "1.0.0"
description = "Official FluxChat SDK for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "benjaminmugangu" }]
keywords = ["fluxchat", "sdk", "chat", "ai"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
